--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/icarus-sim">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/icarus-sim/icarus/">View on GitHub</a>
 
           <h1 id="project_title">Icarus</h1>
           <h2 id="project_tagline">Caching Simulator for Information Centric Networking (ICN)</h2>
